<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="#010101">


        <TextView
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usu_rio"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:textSize="30sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Cd_cd"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageButton"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/voltar"
            android:contentDescription="@drawable/voltar"
            android:clickable="true"
            android:layout_marginRight="50dp"
            android:onClick="goToMainActivity"/>
    </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nome"
            android:ems="10"
            android:id="@+id/Name"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="bottom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/sobrenome"
            android:ems="10"
            android:id="@+id/Surname"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="bottom" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="center_horizontal">



            <Button
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:text = ""
                android:hint="@string/data_de_nascimento"
                android:id="@+id/date"
                android:onClick="showDatePickerDialog"
                android:layout_marginLeft="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:id="@+id/Sexo"
                android:layout_below="@+id/date"
                android:layout_alignLeft="@+id/date"
                android:layout_alignStart="@+id/date"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:layout_margin="12dp"
                android:singleLine="true"
                android:textColor="#000000" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/date"
                android:layout_toRightOf="@+id/Sexo"
                android:layout_toEndOf="@+id/Sexo"
                android:id="@+id/radioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m"
                    android:id="@+id/radioButton"
                    android:layout_below="@+id/date"
                    android:layout_toRightOf="@+id/Sexo"
                    android:layout_toEndOf="@+id/Sexo"
                    android:layout_marginLeft="39dp"
                    android:layout_marginStart="39dp"
                    android:textColor="#000000" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f"
                    android:id="@+id/radioButton2"
                    android:layout_below="@+id/date"
                    android:layout_toRightOf="@+id/date"
                    android:layout_toEndOf="@+id/date"
                    android:textColor="#000000"
                    android:layout_marginLeft="25dp" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/Email"
                android:gravity="bottom"
                android:layout_below="@+id/radioGroup"
                android:layout_alignLeft="@+id/date"
                android:layout_alignStart="@+id/date"
                android:layout_marginRight="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/confirma_o_email"
                android:ems="10"
                android:id="@+id/EmailConf"
                android:gravity="bottom"
                android:layout_below="@+id/Email"
                android:layout_alignLeft="@+id/Email"
                android:layout_alignStart="@+id/Email"
                android:layout_marginRight="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:ems="10"
                android:id="@+id/Pass"
                android:gravity="bottom"
                android:layout_below="@+id/EmailConf"
                android:layout_alignLeft="@+id/EmailConf"
                android:layout_alignStart="@+id/EmailConf"
                android:layout_marginRight="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirma_o_da_senha"
                android:ems="10"
                android:id="@+id/PassConf"
                android:gravity="bottom"
                android:layout_below="@+id/Pass"
                android:layout_alignLeft="@+id/Pass"
                android:layout_alignStart="@+id/Pass"
                android:layout_marginRight="25dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/celular"
                android:ems="10"
                android:id="@+id/Phone"
                android:gravity="bottom"
                android:layout_below="@+id/PassConf"
                android:layout_alignLeft="@+id/PassConf"
                android:layout_alignStart="@+id/PassConf"
                android:layout_marginRight="25dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interesses"
                android:id="@+id/Interests"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="22dp"
                android:textColor="#000000" />

            <SearchView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/searchBar"
                android:layout_below="@+id/Interests"
                android:layout_alignLeft="@+id/Interests"
                android:layout_marginTop="50dp"></SearchView>

            <SearchView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/searchMusica"
                android:layout_alignTop="@+id/searchBar"
                android:layout_toRightOf="@+id/searchBar"
                android:layout_marginLeft="25dp"></SearchView>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar"
                android:id="@+id/checkBar"
                android:layout_below="@+id/Interests"
                android:layout_alignLeft="@+id/Interests"
                android:textColor="#000000"
                android:enabled="false"
                android:checked="true"
                android:clickable="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musica"
                android:id="@+id/checkMusica"
                android:layout_below="@+id/Interests"
                android:layout_alignLeft="@+id/searchMusica"
                android:textColor="#000000"
                android:enabled="false"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comida"
                android:id="@+id/checkFood"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/searchBar"
                android:textColor="#000000"
                android:enabled="false"
                android:checked="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entretenimento"
                android:id="@+id/checkEntertainment"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/searchMusica"
                android:checked="true"
                android:textColor="#000000"
                android:enabled="false" />

            <SearchView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/searchFood"
                android:layout_marginTop="26dp"
                android:layout_below="@+id/checkFood"
                android:layout_alignLeft="@+id/checkFood" />

            <SearchView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/searchEntertainment"
                android:layout_alignTop="@+id/searchFood"
                android:layout_alignLeft="@+id/checkEntertainment"
                android:clickable="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Li e concordo com os termos de \n utilização do TakeMe"
                android:textScaleX="0.45"
                android:textColor ="#000000"

                android:id="@+id/checkBox"
                android:scaleX="2"
                android:scaleY="2"
                android:layout_marginTop="53dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="105dp"
                android:layout_marginRight="25dp"
                android:clickable="true"
                android:enabled="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Me Cadastre"
                android:id="@+id/button"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="80dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="#000000"
                android:textColor="#ffffff" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>