<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#080808">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.apptakeme.tests.MainActivity">
        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/logo"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email_cnpj"
            android:textColorHint="#ffffff"

            android:id="@+id/EmailBox"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft='36dp'
            android:clickable="true"
            android:gravity="bottom"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:paddingLeft='36dp'
            android:hint="@string/password"
            android:textColorHint="#ffffff"
            android:id="@+id/password"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:textColor="#ffffff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="380dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="125dp"
                android:layout_height="30dp"

                android:hint="@string/forgot_pass"
                android:textColorHint="#ffffff"
                android:id="@+id/Fgt_Pass"
                android:background="#232323"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:layout_marginTop="12dp" />

            <Button
                android:layout_width="120dp"
                android:layout_height="56dp"
                android:onClick="goToMainUserScreen"
                android:id="@+id/Connect"
                android:hint="@string/conecte"
                android:textColorHint="#333333"
                android:layout_marginTop="44dp"
                android:layout_below="@+id/Fgt_Pass"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:clickable="true" />

            <Button
                android:layout_width="120dp"
                android:layout_height="56dp"
                android:id="@+id/FB_Connect"
                android:textColorHint="#333333"
                android:hint="@string/fb_connect"
                android:layout_alignTop="@+id/Connect"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                />

            <Button
                android:layout_width="350dp"
                android:layout_height="56dp"
                android:hint="@string/cadastro"
                android:textColorHint="#333333"
                android:id="@+id/Sign_Up"
                android:clickable="true"
                android:layout_marginTop="24dp"
                android:layout_below="@+id/FB_Connect"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="18dp"
                android:onClick="goTocadastro"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="56dp"
                android:hint="@string/biz_cadastro"
                android:textColorHint="#333333"
                android:id="@+id/Biz_SignUp"
                android:clickable="true"
                android:layout_below="@+id/Sign_Up"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="18dp" />

            <Button
                android:layout_width="350dp"
                android:layout_height="56dp"
                android:textColorHint="#333333"
                android:hint="@string/stafflogin"
                android:id="@+id/Takeme_staff"
                android:layout_below="@+id/Biz_SignUp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="18dp"
                android:clickable="true" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>